[package]
name = "springwood"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
tui = { git = "https://github.com/fdehau/tui-rs.git", rev = "fbd8344", default-features = false, features = ['crossterm'] }
serde_json = {version = "1.0.64", features = ['preserve_order']}